# ghloc-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: cli.rs  git.rs  main.rs
src/interface/: code_report.rs  file_tree.rs  file_viewer.rs  mod.rs
