[package]
name = "ghloc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Functionality
tokei = "12.1"

# CLI
clap = { version = "4.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }

# Filesystem
git2 = "0.15"
walkdir = "2.3.2"
tempfile = "3.3"
indicatif = "0.17.2"
tui-tree-widget = "0.11.0"
crossterm = "0.25.0"
tui = "0.19.0"
itertools = "0.10.5"
