[package]
name = "ghloc"
version = "0.1.1"
edition = "2021"
authors = ["Roberto Ariosa <rob.ariosa@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "List the lines of code of a GitHub repository."
repository = "https://github.com/MrRobb/ghloc-rs"
keywords = ["utility", "cli", "cloc", "lines", "statistics"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"
rust-version = "1.56"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

# Functionality
tokei = "12.1"

# CLI
clap = { version = "4.0", features = ["derive"] }
url = { version = "2.3", features = ["serde"] }

# Filesystem
git2 = "0.15"
tempfile = "3.3"
indicatif = "0.17.2"
crossterm = "0.25.0"
tui = "0.19.0"
itertools = "0.10.5"
